# Energy-Aware-LLM-Inference-on-Consumer-Hardware

./: .gitignore  README.md  add_header.py  current_report_output.txt  download_model.py  get_stats.py  pyproject.toml  read_output.py  run_pipeline.ps1  stats.json  stats_output.json  test.csv  test_server_connection.py  verification_output.txt  verification_report_final.txt
EnegyDashboard/: EnegyDashboard.yyp
GameMaker_Scripts/: README.md  script_DataLoader.gml  script_GraphRenderer.gml
config/: model_hashes.json  p1_runs.yaml  p2_ablation.yaml  prompt_config.json
dashboard-web/: package-lock.json  package.json
data/: README.md  gamemaker_export.json  latency_results.csv  power_logs.csv  raw_cpu_power_20251001_185204.csv  raw_cpu_power_20251001_191345.csv  raw_cpu_power_20251123_163821.csv  raw_cpu_power_20251123_163827.csv  raw_cpu_power_20251123_163834.csv  raw_cpu_power_20251123_163843.csv  raw_cpu_power_20251123_163849.csv  raw_cpu_power_20251123_163855.csv  raw_cpu_power_20251123_163900.csv  raw_cpu_power_20251123_163904.csv  raw_cpu_power_20251123_163907.csv  raw_cpu_power_20251123_163910.csv  raw_cpu_power_20251123_163913.csv  raw_cpu_power_20251123_163917.csv  raw_cpu_power_20251123_163924.csv  raw_cpu_power_20251123_163931.csv  raw_cpu_power_20251123_201620.csv  raw_cpu_power_20251123_201627.csv  raw_cpu_power_20251123_201634.csv  raw_cpu_power_20251123_201658.csv  raw_cpu_power_20251123_201704.csv  raw_cpu_power_20251123_201711.csv  raw_cpu_power_20251123_201734.csv  raw_cpu_power_20251123_201740.csv  raw_cpu_power_20251123_201747.csv  (+117 more)
src/: run_cpu.py  (+7 more)
(+114 files in other folders)
